# buffer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: buffer.cpp  buffer.hpp  buffer_reader.cpp  buffer_reader.hpp  buffer_writer.cpp  buffer_writer.hpp
test/: CMakeLists.txt
test/src/: buffer_reader_test.cpp  buffer_test.cpp  buffer_writer_test.cpp
test/tests/: buffer_reader_test.cpp  buffer_test.cpp  buffer_writer_test.cpp
